fix: spacing and icon fixes

--- a/src/biz-components/HeaderNavigation/Navigation.scss
+++ b/src/biz-components/HeaderNavigation/Navigation.scss
@@ -13,9 +13,13 @@
     }
   }
 
-  .search {
+  .search-container {
     width: 25rem;
     margin-bottom: 0;
+  }
+
+  .search-box {
+    padding: 16px;
   }
 
   .actions {
